convert to typescript

--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "my-cli-project",
   "version": "1.0.0",
   "description": "A simple command line interface project",
-  "main": "bin/cli.js",
+  "main": "dist/bin/cli.js",
   "bin": {
-    "my-cli": "bin/cli.js"
+    "my-cli": "dist/bin/cli.js"
   },
   "scripts": {
-    "start": "node bin/cli.js"
+    "start": "ts-node bin/cli.ts",
+    "build": "tsc",
+    "test": "jest"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.4",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.3"
   },
   "keywords": [],
   "author": "",
